<resources>
    <!-- strings -->
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>

    <!-- button text -->
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>

    <!-- symbols text -->
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equals">=</string>
    <string name="clear">Clear</string>

</resources>

